compiler/lyra/src/test/resources/semantic_errors/AbstractMethodNonAbstractClass.ly
interface Veiculo {
    def mover(x : Int);
}

class Uno implements Veiculo {
    def vrum {}
}

class Application {
    def main { }
}